--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "1.0.0",
   "description": "The consent management library that doesn't fight your design system",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/TiberiusGh/1DV610-L2.git"
+  },
+  "homepage": "https://github.com/TiberiusGh/1DV610-L2#readme",
+  "bugs": {
+    "url": "https://github.com/TiberiusGh/1DV610-L2/issues"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsc --watch",
